# cpp-blackmagic

./: CMakeLists.txt  README.md
cpp-blackmagic/: CMakeLists.txt
cpp-blackmagic/docs/: decorator.md  depends.md  preprocess.md
cpp-blackmagic/examples/: CMakeLists.txt
cpp-blackmagic/examples/http-server/: http_server_example.cpp
cpp-blackmagic/examples/src/: decorator_example.cpp  depends_example.cpp
cpp-blackmagic/examples/src/decorator/: case_basic.cpp  case_chain.cpp  case_context.cpp  case_expression.cpp  case_fixed_target.cpp  case_member.cpp  cases.h  main.cpp
cpp-blackmagic/include/cppbm/: decorator.h  depends.h  hook.h  hooker.h  noncopyable.h  task.h
cpp-blackmagic/include/cppbm/internal/depends/: context.h  coroutine.h  factory_invoke.h  inject.h  inject_async.h  inject_sync.h  maker.h  meta.h  placeholder.h  registry.h  resolve.h  resolve_async.h  resolve_sync.h
cpp-blackmagic/include/cppbm/internal/depends/compile/: inject.h  invoke.h  meta.h  registry.h
cpp-blackmagic/include/cppbm/internal/depends/runtime/: context.h  error.h  inject.h  placeholder.h  resolve.h
cpp-blackmagic/include/cppbm/internal/depends/runtime/coroutine/: scheduler.h  task.h  task_forward.h  task_promise.h
cpp-blackmagic/include/cppbm/internal/depends/runtime/inject/: async.h  sync.h
cpp-blackmagic/include/cppbm/internal/depends/runtime/resolve/: async.h  sync.h
cpp-blackmagic/include/cppbm/internal/hook/: arg_slot.h  call_context.h  error.h  hook.h  hooker.h  node.h  pipeline.h  registry.h  state.h
cpp-blackmagic/include/cppbm/internal/utils/: contextvar.h  noncopyable.h  scope_exit.h
cpp-blackmagic/scripts/: decorator.py  inject.py  invoker.py  preprocess.py
cpp-blackmagic/scripts/cmake/: preprocess.cmake
cpp-blackmagic/scripts/msbuild/: line_map.py  preprocess.props  preprocess.targets
cpp-blackmagic/scripts/vs/: preprocess.targets
cpp-blackmagic/src/internal/hooker/: dobby.cpp  minhook.cpp
cpp-blackmagic/tests/: CMakeLists.txt
cpp-blackmagic/tests/src/: benchmark.cpp  depends_benchmark.cpp
test/: CMakeLists.txt  inlinehook.h  main.cpp  test.h
test/src/: main.cpp  test.h
